--- a/django3_template/home/templates/home/index.html
+++ b/django3_template/home/templates/home/index.html
@@ -1,1 +1,4 @@
-Welcome to your new site!
+<h1>Welcome to your new site!</h1>
+
+<p>Django {{ django_version }}</p>
+<p>Python {{ python_version }}</p>
