Add base template, add djhtml

--- a/django3_template/home/templates/home/index.html
+++ b/django3_template/home/templates/home/index.html
@@ -1,4 +1,8 @@
-<h1>Welcome to your new site!</h1>
+{% extends 'base.html' %}
 
-<p>Django {{ django_version }}</p>
-<p>Python {{ python_version }}</p>
+{% block content %}
+    <h1>Welcome to your new site!</h1>
+
+    <p>Django {{ django_version }}</p>
+    <p>Python {{ python_version }}</p>
+{% endblock content %}
