--- a/django_template/home/templates/home/index.html
+++ b/django_template/home/templates/home/index.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
+{% load i18n %}
+
 {% block content %}
-    <h1>Welcome to your new site!</h1>
+    <h1>{% trans "Welcome to your new site!" %}</h1>
 
     <p>Django {{ django_version }}</p>
     <p>Python {{ python_version }}</p>
